prevent pagebreaks inside rules

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -71,6 +71,7 @@ footer {
 .rule-container {
 	margin-bottom: 2em;
 	margin-top: .5em;
+	page-break-inside:avoid;
 }	
 
 .rule-container:nth-child(even) {
